03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-app
  labels:
    app: nginx-landing-page
spec:
  selector:
    app: nginx-landing-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
